@@ -111,8 +111,14 @@ listeners and loggers.</p>
     <td width="34%">BuildLogger</td>
   </tr>
   <tr>
-    <td width="33%"><code><a href="#BigProjectLogger">org.apache.tools.ant.BigProjectLogger</a></code></td>
+    <td width="33%"><code><a href="#BigProjectLogger">org.apache.tools.ant.listener.BigProjectLogger</a></code></td>
     <td width="33%">Prints the project name every target</td>
+    <td width="34%">BuildLogger</td>
+  </tr>
+  <tr>
+    <td width="33%"><code><a href="#ProfileLogger">org.apache.tools.ant.listener.ProfileLogger</a></code></td>
+    <td width="33%">The default logger, with start times, end times and
+    durations added for each task and target.</td>
     <td width="34%">BuildLogger</td>
   </tr>
 </table>
