@@ -173,6 +173,8 @@ Fixed bugs:
 
 Other changes:
 --------------
+* Profiling logger has been added with basic profiling capabilities.
+
 * <script> now has basic support for JavaFX scripts
 
 * SSH task can now take a command parameter containing the commands to execute.
